XWIKI-19172: Display rendered images in view mode inside a lightbox * forgot to add the code for copying the image alt to the lightbox slide image * align the author from the description * add a string entity reference resolver for extracting the EntityReference from a string URL, needed for the lightbox description * get the description of images by resolving the reference from url

--- a/xwiki-platform-core/xwiki-platform-image/xwiki-platform-image-webjar/src/main/webjar/less/lightbox.less
+++ b/xwiki-platform-core/xwiki-platform-image/xwiki-platform-image-webjar/src/main/webjar/less/lightbox.less
@@ -56,6 +56,7 @@
     .descriptionColRight {
       float: right;
       width: 30%;
+      text-align: end;
     }
   }
 }
